--- a/work_horse.ipynb
+++ b/work_horse.ipynb
@@ -1,6 +1,372 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: pylab import has clobbered these variables: ['test']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md                    sample_submission.csv\r\n",
+      "attributes.csv               test.csv\r\n",
+      "product_descriptions.csv     train.csv\r\n",
+      "relevance_instructions.docx  work_horse.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train=pd.read_csv('train.csv',encoding=\"ISO-8859-1\")\n",
+    "test=pd.read_csv('test.csv', encoding=\"ISO-8859-1\")\n",
+    "attributes=pd.read_csv('attributes.csv', encoding=\"ISO-8859-1\")\n",
+    "descriptions=pd.read_csv('product_descriptions.csv',encoding=\"ISO-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 74067 entries, 0 to 74066\n",
+      "Data columns (total 5 columns):\n",
+      "id               74067 non-null int64\n",
+      "product_uid      74067 non-null int64\n",
+      "product_title    74067 non-null object\n",
+      "search_term      74067 non-null object\n",
+      "relevance        74067 non-null float64\n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 3.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>product_uid</th>\n",
+       "      <th>product_title</th>\n",
+       "      <th>search_term</th>\n",
+       "      <th>relevance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>100001</td>\n",
+       "      <td>Simpson Strong-Tie 12-Gauge Angle</td>\n",
+       "      <td>angle bracket</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>100001</td>\n",
+       "      <td>Simpson Strong-Tie 12-Gauge Angle</td>\n",
+       "      <td>l bracket</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>100002</td>\n",
+       "      <td>BEHR Premium Textured DeckOver 1-gal. #SC-141 ...</td>\n",
+       "      <td>deck over</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16</td>\n",
+       "      <td>100005</td>\n",
+       "      <td>Delta Vero 1-Handle Shower Only Faucet Trim Ki...</td>\n",
+       "      <td>rain shower head</td>\n",
+       "      <td>2.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17</td>\n",
+       "      <td>100005</td>\n",
+       "      <td>Delta Vero 1-Handle Shower Only Faucet Trim Ki...</td>\n",
+       "      <td>shower only faucet</td>\n",
+       "      <td>2.67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  product_uid                                      product_title  \\\n",
+       "0   2       100001                  Simpson Strong-Tie 12-Gauge Angle   \n",
+       "1   3       100001                  Simpson Strong-Tie 12-Gauge Angle   \n",
+       "2   9       100002  BEHR Premium Textured DeckOver 1-gal. #SC-141 ...   \n",
+       "3  16       100005  Delta Vero 1-Handle Shower Only Faucet Trim Ki...   \n",
+       "4  17       100005  Delta Vero 1-Handle Shower Only Faucet Trim Ki...   \n",
+       "\n",
+       "          search_term  relevance  \n",
+       "0       angle bracket       3.00  \n",
+       "1           l bracket       2.50  \n",
+       "2           deck over       3.00  \n",
+       "3    rain shower head       2.33  \n",
+       "4  shower only faucet       2.67  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAEACAYAAAC3adEgAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFAZJREFUeJzt3W+sZdV53/Hvzx5jJzXJlMQaAyaMX4yTIUUaCyUT1Up8\nFduIRCo4kmWDFIdJUNR66ubPq0BVaVArIRypTWxVsSoZt0OqEKNaxaTCFGyB5CqCaV3AxGPKjJRr\nMcQzVf0H23VlgXj64u7xnH25l/vnbO7ad5/vRzq6e6+zz7prrVkzz+znOefeVBWSJJ33utYDkCSN\ni4FBktRjYJAk9RgYJEk9BgZJUo+BQZLU86qBIckVSR5J8tUkf5Pk97r2S5I8nOTZJA8l2TvzmtuS\nnEryTJJrZ9qvSfJ099zHZ9rfmOQzXftjSa58LSYqSdqcje4YXgT+sKp+Hvgl4J8mOQjcCjxcVe8A\nvtidk+Qq4EPAVcB1wJ8lSdfXJ4FbquoAcCDJdV37LcA3u/Y/AT422OwkSVv2qoGhqs5W1ZPd8feB\nrwGXA9cDx7vLjgPv745vAO6pqherahk4DRxOcilwcVWd6K67e+Y1s319FnjPvJOSJG3fpmsMSfYD\n7wQeB/ZV1bnuqXPAvu74MuDMzMvOsBJIVrc/37XTfX0OoKpeAl5IcslWJiFJGs6mAkOSN7Pyv/nf\nr6rvzT5XKz9Tw5+rIUkTsWejC5K8gZWg8OdVdV/XfC7JW6vqbJcm+t9d+/PAFTMvfxsrdwrPd8er\n28+/5meAv0uyB/jJqvrWGuMw+EjSFlVVNr6qb6N3JQW4CzhZVX8689T9wM3d8c3AfTPtNya5KMnb\ngQPAiao6C3w3yeGuzw8Dn1ujrw+wUsxeU1X5GOBx7Nix5mOY0mPS69ng792k13OHH9u10R3Du4Df\nBL6S5Imu7TbgTuDeJLcAy8AHu3+4Tya5FzgJvAQcrQujOwr8B+DHgAeq6sGu/S7gz5OcAr4J3Ljt\n2WhTlpeXWw9hUlzPYbme7b1qYKiq/8b6dxXvXec1dwB3rNH+ZeDqNdp/SBdYJEnt+cnnBXTkyJHW\nQ5gU13NYrmd7mScPtZOS1G4ZqzQZCfj3btdKQg1dfNY0Pfroo62HMCmu57Bcz/YMDJKkHlNJktZn\nKmlX224qacMPuEmS2rjwM0h3lqmkBWQOd1iu57Bcz9Vqjsf2GBgkST3WGCStzxpDUyuppHnW37er\nSpIGYGBYQOZwh+V6Dsv1bM/AIEnqscYgaX3WGJqyxiBJGgUDwwIyhzss13NYrmd7BgZJUo81Bknr\ns8bQlDUGSdIoGBgWkDncYbmew3I92zMwSJJ6rDFIWp81hqasMUiSRsHAsIDM4Q7L9RyW69megUGS\n1GONQdL6rDE0ZY1BkjQKBoYFZA53WK7nsFzP9gwMkqQeawyS1meNoSlrDJKkUTAwLCBzuMNyPYfl\nerZnYJAk9VhjkLQ+awxNWWOQJI2CgWEBmcMdlus5LNezPQODJKnHGoOk9VljaMoagyRpFAwMC8gc\n7rBcz2G5nu0ZGCRJPdYYJAHn89l9BWw1Qe3f0+G0qjHsmeM7Spqc1f8IbfUfpi3/G6QRMpW0gMzh\nDsv1HJbr2Z6BQZLUY41BErB2PrsI2WIqyb+nw/FzDJKkUTAwLCBzuMNyPYflera3YWBI8ukk55I8\nPdN2e5IzSZ7oHr8289xtSU4leSbJtTPt1yR5unvu4zPtb0zyma79sSRXDjlBSdLWbFhjSPLLwPeB\nu6vq6q7tGPC9qvo3q669CvgL4BeAy4EvAAeqqpKcAD5aVSeSPAB8oqoeTHIU+AdVdTTJh4DfqKob\n1xiHNQbpNWSNYXxGW2Ooqi8B317zO77SDcA9VfViVS0Dp4HDSS4FLq6qE911dwPv746vB453x58F\n3rP54UtSX5JBHotsnhrDP0vyVJK7kuzt2i4Dzsxcc4aVO4fV7c937XRfnwOoqpeAF5JcMse4tAFz\nuMNyPYc1zHrWnI/Ftt1PPn8S+Jfd8b8C/jVwyyAjehVHjhxh//79AOzdu5dDhw6xtLQEXNhMnnvu\n+fbPL1jvfGmDc0Yxn82Pd73zlT7H9+ex0fjPHy8zj019jiHJfuCvztcY1nsuya0AVXVn99yDwDHg\n68AjVXWwa78J+JWq+kh3ze1V9ViSPcA3quota3wfawzSa2gqNYb58/IwhnnAiGsMa36rlZrBeb8B\nnH/H0v3AjUkuSvJ24ABwoqrOAt9NcjgrM/0w8LmZ19zcHX8A+OJ2xiRJGsZm3q56D/DXwM8meS7J\n7wAfS/KVJE8B7wb+EKCqTgL3AieBzwNHZ/6bfxT4FHAKOF1VD3btdwE/leQU8AfArYPNTmt65W2q\n5uF6Dsv1bG/DGkNV3bRG86df5fo7gDvWaP8y8IpUVFX9EPjgRuOQJO0Mf1aSJMAaw6pems8DdlmN\nQZI0XQaGBWQOd1iu57Bcz/YMDJKkHmsMkgBrDKt6aT4PsMYgSRoJA8MCMoc7LNdzWK5newYGSVKP\nNQZJgDWGVb00nwdYY5AkjYSBYQGZwx2W6zks17M9A4MkqccagyTAGsOqXprPA6wxSJJGwsCwgMzh\nDsv1HJbr2Z6BQZLUY41BEmCNYVUvzecB1hgkSSNhYFhA5nCH5XoOy/Vsz8AgSeqxxiAJsMawqpfm\n8wBrDJKkkTAwLCBzuMNyPYflerZnYJAk9VhjkARYY1jVS/N5gDUGSdJIGBgWkDncYbmew3I92zMw\nSJJ6rDFIAqwxrOql+TzAGoMkaSQMDAvIHO6wXM9huZ7tGRgkST3WGKQ5reSB59d6f1tj6PXSfB7Q\nrsawZ47vKOlH5v+HSBoLU0kLyByuxsz92Z6BQZLUY41BmtNUctrWGHq9NJ8H+DkGSdJIGBgWkDlc\njZn7sz0DgySpxxqDNKep5LStMfR6aT4PsMYgSRoJA8MCMoerMXN/tmdgkCT1WGOQ5jSVnLY1hl4v\nzecB1hgkSSNhYFhA5nA1Zu7P9jYMDEk+neRckqdn2i5J8nCSZ5M8lGTvzHO3JTmV5Jkk1860X5Pk\n6e65j8+0vzHJZ7r2x5JcOeQEJUlbs5k7hn8PXLeq7Vbg4ap6B/DF7pwkVwEfAq7qXvNnufDD6j8J\n3FJVB4ADSc73eQvwza79T4CPzTEfbcLS0lLrIUjrcn+2t2FgqKovAd9e1Xw9cLw7Pg68vzu+Abin\nql6sqmXgNHA4yaXAxVV1orvu7pnXzPb1WeA925iHJGkg260x7Kuqc93xOWBfd3wZcGbmujPA5Wu0\nP9+10319DqCqXgJeSHLJNselTTCHqzFzf7Y3929wq6pKsiPv6zpy5Aj79+8HYO/evRw6dOhHt53n\nN5Pnnrc4h0e7r9s9X+mz9XwuWO98o/lcmEuL8U//z2Oj8Z8/XmYem/ocQ5L9wF9V1dXd+TPAUlWd\n7dJEj1TVzyW5FaCq7uyuexA4Bny9u+Zg134T8CtV9ZHumtur6rEke4BvVNVb1hiDn2PQKE3lffN+\njqHXS/N5wO77HMP9wM3d8c3AfTPtNya5KMnbgQPAiao6C3w3yeGuGP1h4HNr9PUBVorZkqRGNvN2\n1XuAvwZ+NslzSX4buBN4X5JngV/tzqmqk8C9wEng88DRmf/mHwU+BZwCTlfVg137XcBPJTkF/AHd\nO5z02nnlbao0Hu7P9jasMVTVTes89d51rr8DuGON9i8DV6/R/kPggxuNQ5K0M/xZSdKcppLTtsbQ\n66X5PGD31RgkSRNlYFhA5nA1Zu7P9gwMkqQeawzSnKaS07bG0Oul+TzAGoMkaSQMDAvIHK7GzP3Z\nnoFBktRjjUGa01Ry2tYYer00nwdYY5AkjYSBYQGZw9WYuT/bMzBIknqsMUhzmkpO2xpDr5fm8wBr\nDJKkkTAwLCBzuBoz92d7BgZJUo81BmlOU8lpW2Po9dJ8HmCNQZI0EgaGBWQOV2Pm/mzPwCBJ6rHG\nIM1pKjltawy9XprPA6wxSJJGwsCwgMzhaszcn+0ZGCRJPdYYpDlNJadtjaHXS/N5gDUGSdJIGBgW\nkDlcjZn7sz0DgySpxxqDNKep5LStMfR6aT4PsMYgSRoJA8MCMoerMXN/tren9QC0O63c4s5vDLfr\nkvqsMWhbppTHnddU1sIaQ6+X5vMAawySpJEwMCwgc7gaM/dnewYGSVKPNQZty5TyuPOaylpYY+j1\n0nweYI1BkjQSBoYFZA5XY+b+bM/AIEnqscagbZlSHndeU1kLawy9XprPA6wxSJJGwsCwgMzhaszc\nn+0ZGCRJPdYYtC1TyuPOayprYY2h10vzeYA1BknSSBgYFpA5XI2Z+7O9uQJDkuUkX0nyRJITXdsl\nSR5O8mySh5Lsnbn+tiSnkjyT5NqZ9muSPN099/F5xiRJms9cNYYkfwtcU1Xfmmn7Y+D/VNUfJ/kj\n4O9X1a1JrgL+AvgF4HLgC8CBqqouqHy0qk4keQD4RFU9uOp7WWMYkSnlcec1lbWwxtDrpfk8YHfX\nGFZ/0+uB493xceD93fENwD1V9WJVLQOngcNJLgUurqoT3XV3z7xGkrTD5g0MBXwhyf9I8rtd276q\nOtcdnwP2dceXAWdmXnuGlTuH1e3Pd+16jZjD1Zi5P9ub93c+v6uqvpHkLcDDSZ6ZfbJLEw12P3bk\nyBH2798PwN69ezl06BBLS0vAhc3k+c6cr3gUWJo5ZhvnjGI+86/HevPb7PlKn63nc8F65xvN58Jc\nWox/+n8eG43//PEy8xjscwxJjgHfB34XWKqqs12a6JGq+rkktwJU1Z3d9Q8Cx4Cvd9cc7NpvAt5d\nVf9kVf/WGEZkSnnceU1lLawx9HppPg/YhTWGJD+e5OLu+O8B1wJPA/cDN3eX3Qzc1x3fD9yY5KIk\nbwcOACeq6izw3SSHs7IKH555jSRph81TY9gHfCnJk8DjwH+pqoeAO4H3JXkW+NXunKo6CdwLnAQ+\nDxyduQU4CnwKOAWcXv2OJA3LHK7GzP3Z3rZrDFX1t8ChNdq/Bbx3ndfcAdyxRvuXgau3OxZJ0nD8\nWUnalinlcec1lbWwxtDrpfk8YBfWGCRJ02RgWEDmcDVm7s/2DAySpB5rDNqWKeVx5zWVtbDG0Oul\n+TzAGoMkaSQMDAvIHK7GzP3ZnoFBktRjjUHbMqU87rymshbWGHq9NJ8HWGOQJI2EgWEBmcPVmLk/\n2zMwSJJ6rDFoW6aUx53XVNbCGkOvl+bzAGsMkqSRMDAsIHO4GjP3Z3sGBklSjzUGbcuU8rjzmspa\nWGPo9dJ8HtCuxrDt3+Cm7Vn5g57fGDatpGkyldREzfmYjzlcjZn7sz0DgySpxxrDDptK/nMq8xjC\nVNbCGkOvl+bzAD/HIEkaCQPDAjKHqzFzf7ZnYJAk9Vhj2GFTyX9OZR5DmMpaWGPo9dJ8HmCNQZI0\nErvqA25PPPHEtl/7pje9iYMHDw44mt3r0UcfZWlpqfUwpDW5P9vbVYFhael3tvW6l1/+f7z1rW/k\n1KmnBh6RJE3PrqoxbD/X9hRXXvlbLC+3DwxTyX9OZR5DmMpaWGPo9dJ8HmCNQZI0EgaGBeT7xDVm\n7s/2DAySpB5rDDtsKvnPqcxjCFNZC2sMvV6azwOsMUiSRsLAsIDM4WrM3J/tGRgkST3WGHbYVPKf\nU5nHEKayFtYYer00nwdYY5AkjYSBYQGZw9WYuT/bMzBIknqsMeywqeQ/pzKPIUxlLawx9HppPg+w\nxiBJGgkDwwIyh6sxc3+2Z2CQJPVYY9hhU8l/TmUeQ5jKWlhj6PXSfB5gjUGSNBKjCQxJrkvyTJJT\nSf6o9XimzByuxsz92d4oAkOS1wP/FrgOuAq4KcnBtqOarieffLL1EKR1uT/bG0VgAH4ROF1Vy1X1\nIvCXwA2NxzRZ3/nOd1oPQVqX+7O9sQSGy4HnZs7PdG2SpB22p/UAOpsqu//ET/yjbXX+8ssv8PrX\nb+ulk7S8vNx6CNK63J/tjeLtqkl+Cbi9qq7rzm8DXq6qj81c036gkrTLbOftqmMJDHuA/wW8B/g7\n4ARwU1V9renAJGkBjSKVVFUvJfko8F+B1wN3GRQkqY1R3DFIksZjLO9KAiDJp5OcS/L0q1zzie5D\ncE8leedOjm832WgtkywleSHJE93jX+z0GHeTJFckeSTJV5P8TZLfW+c69+cGNrOW7s/NS/KmJI8n\nebJbz9vXuW7ze7OqRvMAfhl4J/D0Os//OvBAd3wYeKz1mMf62MRaLgH3tx7nbnkAbwUOdcdvZqUm\ndnDVNe7P4dbS/bm1Nf3x7use4DHg8Krnt7Q3R3XHUFVfAr79KpdcDxzvrn0c2Jtk306MbbfZxFoC\nbPndCouqqs5W1ZPd8feBrwGXrbrM/bkJm1xLcH9uWlX9oDu8CHgD8PKqS7a0N0cVGDZhrQ/Cva3R\nWHa7Av5hd1v5QJKrWg9ot0iyn5W7scdXPeX+3KJXWUv35xYkeV2SJ4FzwENV9d9XXbKlvTmKdyVt\n0er/RVg9357/CVxRVT9I8mvAfcA7Go9p9JK8GfhPwO93/9t9xSWrzt2f69hgLd2fW1BVLwOHkvwk\n8J+T/HxVfXXVZZvem7vtjuF54IqZ87d1bdqiqvre+dvPqvo88IYklzQe1qgleQPwWeA/VtV9a1zi\n/tykjdbS/bk9VfUC8AgrP5B01pb25m4LDPcDvwU/+rT0d6rqXNsh7U5J9mXlt4CQ5BdZeevytxoP\na7S6tboLOFlVf7rOZe7PTdjMWro/Ny/JTyfZ2x3/GPA+Vuo2s7a0N0eVSkpyD/Bu4KeTPAccY6WQ\nQlX9u6p6IMmvJzkN/F/gt9uNdtw2WkvgA8BHkrwE/AC4sdVYd4l3Ab8JfCXJE13bPwd+BtyfW7Th\nWuL+3IpLgePdry94HfCZbi/+Y9je3vQDbpKknt2WSpIkvcYMDJKkHgODJKnHwCBJ6jEwSJJ6DAyS\npB4DgySpx8AgSer5/1BC6GUD+3UNAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x106fa9550>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "train.relevance.hist(bins=20)\n",
+    "plt.axvline(x=train.relevance.median(), color='r')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.33"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.relevance.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13,)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.relevance.value_counts().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        8.00\n",
+       "1        7.50\n",
+       "2        8.00\n",
+       "3        7.33\n",
+       "4        7.67\n",
+       "5        8.00\n",
+       "6        7.67\n",
+       "7        8.00\n",
+       "8        7.67\n",
+       "9        8.00\n",
+       "10       7.67\n",
+       "11       8.00\n",
+       "12       8.00\n",
+       "13       7.00\n",
+       "14       7.67\n",
+       "15       7.67\n",
+       "16       8.00\n",
+       "17       6.00\n",
+       "18       6.67\n",
+       "19       7.33\n",
+       "20       7.33\n",
+       "21       6.33\n",
+       "22       7.67\n",
+       "23       7.33\n",
+       "24       6.33\n",
+       "25       7.33\n",
+       "26       7.33\n",
+       "27       7.00\n",
+       "28       7.33\n",
+       "29       7.67\n",
+       "         ... \n",
+       "74037    6.67\n",
+       "74038    6.33\n",
+       "74039    7.33\n",
+       "74040    7.33\n",
+       "74041    7.67\n",
+       "74042    6.67\n",
+       "74043    8.00\n",
+       "74044    7.67\n",
+       "74045    6.33\n",
+       "74046    7.00\n",
+       "74047    6.67\n",
+       "74048    7.00\n",
+       "74049    6.00\n",
+       "74050    7.33\n",
+       "74051    7.00\n",
+       "74052    7.33\n",
+       "74053    7.33\n",
+       "74054    7.00\n",
+       "74055    6.67\n",
+       "74056    7.00\n",
+       "74057    7.67\n",
+       "74058    8.00\n",
+       "74059    8.00\n",
+       "74060    7.00\n",
+       "74061    8.00\n",
+       "74062    6.00\n",
+       "74063    8.00\n",
+       "74064    7.33\n",
+       "74065    8.00\n",
+       "74066    7.33\n",
+       "Name: relevance, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.relevance.apply(lambda x:x+5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
